# ai-approval-workflow

./: .env.example  .gitignore  .gitleaks.toml  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: action-runner.md  deployment.md  design.md  private-overlay.md  publishing-checklist.md  security.md  use-cases.md  use-cases.zh-CN.md
examples/: demo-daily-summary.yaml  github-trending-daily.yaml  service-upgrade-watch.yaml
scripts/: aaw_action_runner.py  validate_workflows.py
scripts/examples/: service-upgrade-action.example.sh  service-upgrade-check.example.sh
skills/ai-approval-workflow/: SKILL.md
skills/ai-approval-workflow/references/: capability-upgrade-policy.md  workflow-patterns.md
src/ai_approval_workflow/: __init__.py  actions.py  admin.py  ai.py  approvals.py  config.py  domain.py  main.py  notify.py  scheduler.py  storage.py  workflow.py
src/ai_approval_workflow/tasks/: __init__.py  demo_daily_summary.py
src/ai_approval_workflow/templates/: admin.html  approval.html
tests/: conftest.py  test_action_runner.py  test_actions.py  test_admin.py  test_approvals.py  test_config.py  test_notify.py  test_scheduler.py  test_storage.py  test_validate_workflows.py  test_web.py  test_workflow.py  test_workflow_steps.py
