[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-approval-workflow"
version = "0.1.0"
description = "Scheduled AI workflow runtime with mobile-first approval."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ai-approval-workflow contributors" }]
dependencies = [
  "apscheduler>=3.10,<4",
  "fastapi>=0.110,<1",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
  "python-dotenv>=1.0,<2",
  "pyyaml>=6.0,<7",
  "uvicorn[standard]>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_approval_workflow = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
